[package]
name = "sleipnir"
version = "0.1.0"
description = "WebTransport polyfill"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
license = "Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.17.2"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
